修复滚动条和侧边栏显示问题

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,17 @@
                 <h1>{{SITE_LOGO_TEXT}}</h1>
             </div>
             
-            <div class="nav-section">
-                {{NAVIGATION}}
-            </div>
-
-            <div class="nav-section">
-                <div class="section-title">
-                    <i class="fas fa-link"></i>
+            <div class="sidebar-content">
+                <div class="nav-section">
+                    {{NAVIGATION}}
                 </div>
-                {{SOCIAL_LINKS}}
+
+                <div class="nav-section">
+                    <div class="section-title">
+                        <i class="fas fa-link"></i>
+                    </div>
+                    {{SOCIAL_LINKS}}
+                </div>
             </div>
 
             <div class="copyright">
