--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,11 @@
                 {{FRIENDS_CONTENT}}
             </div>
             
+            <!-- 书签页 -->
+            <div class="page" id="bookmarks">
+                {{BOOKMARKS_CONTENT}}
+            </div>
+            
             {{SEARCH_RESULTS}}
         </main>
         
