--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="loading">
+    <!-- 滚动进度指示条 -->
+    <div class="scroll-progress"></div>
     <div class="layout">
         <!-- 移动端按钮 -->
         <div class="mobile-buttons">
@@ -71,8 +73,8 @@
             </div>
 
             <div class="copyright">
-                <p>© {{CURRENT_YEAR}} <a href="https://github.com/rbetree/menav" target="_blank">MeNav</a></p>
-                <p>by <a href="https://github.com/rbetree" target="_blank">rbetree</a></p>
+                <p>© {{CURRENT_YEAR}} <a href="https://github.com/rbetree/menav" target="_blank" rel="noopener">MeNav</a></p>
+                <p>by <a href="https://github.com/rbetree" target="_blank" rel="noopener">rbetree</a></p>
             </div>
         </nav>
 
