--- a/templates/components/site-card.hbs
+++ b/templates/components/site-card.hbs
@@ -1,5 +1,5 @@
 {{#if url}}
-<a href="{{url}}" class="site-card" title="{{name}} - {{description}}">
+<a href="{{url}}" class="site-card{{#if style}} site-card-{{style}}{{/if}}" title="{{name}} - {{description}}" {{#if external}}target="_blank" rel="noopener"{{/if}}>
     <i class="{{#if icon}}{{icon}}{{else}}fas fa-link{{/if}}"></i>
     <h3>{{#if name}}{{name}}{{else}}未命名站点{{/if}}</h3>
     <p>{{description}}</p>
