feat(search): 添加搜索框切换搜索引擎提示
修改搜索框placeholder文本，增加"点击右侧图标可切换搜索引擎"提示

--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -91,7 +91,7 @@
             <!-- 搜索框容器 -->
             <div class="search-container">
                 <div class="search-box">
-                    <input type="text" id="search" placeholder="搜索...">
+                    <input type="text" id="search" placeholder="搜索... (点击右侧图标切换搜索引擎)">
                     <i class="fas fa-search search-icon" title="本地搜索"></i>
                     <div class="search-engine-dropdown">
                         <div class="search-engine-option" data-engine="local" title="本地搜索">
